# hard-sync

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  brief-2.md  brief.md
.github/workflows/: publish.yml  release.yml
cli/: AGENTS.md  Cargo.toml
cli/src/: autostart.rs  config.rs  daemon.rs  init.rs  list.rs  main.rs  output.rs  remove.rs  sync.rs  trash.rs  watch.rs
core/: AGENTS.md  Cargo.toml
core/src/: config.rs  drive.rs  ignore.rs  lib.rs  sounds.rs  sync_engine.rs  watcher.rs
ui/: package-lock.json  package.json
ui/src/: app.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: commands.rs  lib.rs  main.rs
ui/src/lib/: AddPair.svelte
ui/src/routes/: +page.svelte
