[package]
name = "hsync"
version = "1.0.0"
edition = "2024"
description = "Sync files between two paths. Auto-detects drives by UUID/label."
license = "MIT"
repository = "https://github.com/codad5/hard-sync-cli"
keywords = ["sync", "backup", "drive", "usb", "cli"]
categories = ["filesystem", "command-line-utilities"]

[[bin]]
name = "hsync"
path = "src/main.rs"

[dependencies]
auto-launch = "0.6.0"
chrono = "0.4.44"
colored = "3.1.1"
dirs = "6.0.0"
fli = "1.2.2"
hard-sync-core = { path = "../core", version = "1.0.0" }
