[package]
name = "hsync-ui"
version = "0.2.0"
description = "Tauri GUI for hard-sync"
edition = "2024"

[lib]
name = "hsync_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
hard-sync-core = { path = "../../core", version = "0.2.0" }
